# systeminit-take-home

./: .gitignore  Cargo.toml  README.md  build.rs
src/: api.rs  main.rs  router.rs
ui/: package.json  tailwind.config.js  vue.config.js
ui/src/: App.vue
ui/src/components/: Message.vue  MessageBoard.vue  MessageList.vue  PostMessage.vue
