[package]
name = "systeminit-take-home"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Helwig <jacob@technosorcery.net"]

[dependencies]
axum = "0.4.0"
hyper = "0.14.15"
mime = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.2.0"
